appId: com.example.soen345
---
- launchApp

# Go to login page
- tapOn:
    id: "loginMainButton"

# Login
- tapOn:
    id: "loginUsername"
- inputText: "sara"

- tapOn:
    id: "loginPassword"
- inputText: "123456"

- tapOn:
    id: "loginButton"

# Open search screen
- tapOn:
    id: "chipConcerts"

# Verify search page opened
- assertVisible:
    id: "rvDashboardEvents"

# Enter search term
- tapOn:
    id: "rvDashboardEvents"

- tapOn:
    id: "backButton"

- tapOn:
    id: "chipSports"

# Verify search page opened
- assertVisible:
    id: "rvDashboardEvents"

# Enter search term
- tapOn:
    id: "rvDashboardEvents"

- tapOn:
    id: "backButton"

- tapOn:
    id: "chipTheaters"

- tapOn:
    id: "chipAll"

# Verify search page opened
- assertVisible:
    id: "rvDashboardEvents"
